--- a/music.player.musicplayer.musicapps.mp3player.json
+++ b/music.player.musicplayer.musicapps.mp3player.json
@@ -7,9 +7,9 @@
       "fb_advance_native_skippos": "9",
       "firstpage_fb_duration": "0",
       "IsAdshowOneTime": "true",
-      "google_native_appid": "",
-      "google_ad_interestial": "",
-      "google_banner": "",
+      "google_native_appid": "ca-app-pub-3940256099942544~3347511713",
+      "google_ad_interestial": "ca-app-pub-3940256099942544/1033173712",
+      "google_banner": "ca-app-pub-3940256099942544/6300978111",
       "fb_ad_interestial": "",
       "fb_ad_interestial_duration": "800",
       "fb_advance_native_adid": "",
