remove fb native banner id

--- a/music.player.musicplayer.musicapps.mp3player.json
+++ b/music.player.musicplayer.musicapps.mp3player.json
@@ -13,7 +13,7 @@
       "fb_ad_interestial": "284670483026260_284670683026240",
       "fb_ad_interestial_duration": "800",
       "fb_advance_native_adid": "284670483026260_284673279692647",
-      "fb_nativebanner": "284670483026260_284671126359529",
+      "fb_nativebanner": "",
       "is_fb_bannerad_show": "2",
       "active_banner_ad": "1",
       "is_update": "false",
