--- a/music.player.musicplayer.musicapps.mp3player.json
+++ b/music.player.musicplayer.musicapps.mp3player.json
@@ -10,16 +10,16 @@
       "google_native_appid": "",
       "google_ad_interestial": "",
       "google_banner": "",
-      "fb_ad_interestial": "284670483026260_284670683026240",
+      "fb_ad_interestial": "",
       "fb_ad_interestial_duration": "800",
-      "fb_advance_native_adid": "284670483026260_284673279692647",
+      "fb_advance_native_adid": "",
       "fb_nativebanner": "",
       "is_fb_bannerad_show": "2",
       "active_banner_ad": "1",
-      "is_update": "false",
-      "is_forcefully": "false",
-      "is_live": "true",
-      "new_url": "",
+      "is_update": "true",
+      "is_forcefully": "true",
+      "is_live": "false",
+      "new_url": "https://play.google.com/store/apps/details?id=music.player.mp3player.audioplayer.musicplayer&gl=US",
       "version_code": "1",
       "new_version_code": "1",
       "message": "New Version Available.",
